fix: added letter spacing

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Manrope');
 
 body, html, * {
-  font-family: 'Manrope';
-  //letter-spacing: 1.5px;
+  font-family: 'Manrope', sans-serif;
+  letter-spacing: 1.25px;
 }
 
 h1 {
